--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>JOHN</title>
 		<link rel="stylesheet" href="./style.css" />
+		<style type="text/css"> .hide{display: none;}</style>
 	</head>
 	<body>
-		<section id="homepage" class="homepage">
+		<section id="homepage " class="homepage">
 			<header class="home-header">
 				<a href="" id="sidebar-settings">
 					<img src="./files/replacement.png" alt="sidebar-settings-icon" /
@@ -87,23 +88,130 @@
 		</section>
 		<section id="category" class="category">
 			<header class="category-header">
-				<img src="./files/back.png" alt="" class="back-icon"/> <span>Meal categories</span>
+				<img src="./files/back.png" alt="" class="back-icon" />
+				<span>Meal categories</span>
 				<img src="./files/back.png" alt="" class="cart-icon" />
 			</header>
 			<main class="category-meals">
-						<div>
-							<div class="meal-wrapper"><div class="image-wrapper">
-								<img
-									src="./files/seafood_shrimp.png"
-									alt="seafood-shrimp-image"
-								/>
-								<button class="view-details">View <span>.</span></button>
-							</div>
-							<p>Seafood Shrimp</p>
-							<span class="stars"></span>
-							<p class="price">$3 per plate</p><button>Add to cart</button>
-</div>
-													</div>
+				<div class="meal-wrapper">
+					<div class="image-wrapper">
+						<img src="./files/seafood_shrimp.png" alt="seafood-shrimp-image" />
+					</div>
+					<p>Seafood Shrimp</p>
+					<span class="stars"></span>
+					<p class="price">$3 per plate</p>
+					<div class="button-wrapper">
+						<button class="category-atc-button">
+							Add to cart
+							<img
+								src="./files/seafood_shrimp.png"
+								alt="seafood-shrimp-image"
+							/>
+						</button>
+					</div>
+				</div>
+				<div class="meal-wrapper">
+					<div class="image-wrapper">
+						<img src="./files/seafood_shrimp.png" alt="seafood-shrimp-image" />
+					</div>
+					<p>Seafood Shrimp</p>
+					<span class="stars"></span>
+					<p class="price">$3 per plate</p>
+					<div class="button-wrapper">
+						<button class="category-atc-button">
+							Add to cart
+							<img
+								src="./files/seafood_shrimp.png"
+								alt="seafood-shrimp-image"
+							/>
+						</button>
+					</div>
+				</div>
+				<div class="meal-wrapper">
+					<div class="image-wrapper">
+						<img src="./files/seafood_shrimp.png" alt="seafood-shrimp-image" />
+					</div>
+					<p>Seafood Shrimp</p>
+					<span class="stars"></span>
+					<p class="price">$3 per plate</p>
+					<div class="button-wrapper">
+						<button class="category-atc-button">
+							Add to cart
+							<img
+								src="./files/seafood_shrimp.png"
+								alt="seafood-shrimp-image"
+							/>
+						</button>
+					</div>
+				</div>
+				<div class="meal-wrapper">
+					<div class="image-wrapper">
+						<img src="./files/seafood_shrimp.png" alt="seafood-shrimp-image" />
+					</div>
+					<p>Seafood Shrimp</p>
+					<span class="stars"></span>
+					<p class="price">$3 per plate</p>
+					<div class="button-wrapper">
+						<button class="category-atc-button">
+							Add to cart
+							<img
+								src="./files/seafood_shrimp.png"
+								alt="seafood-shrimp-image"
+							/>
+						</button>
+					</div>
+				</div>
+				<div class="meal-wrapper">
+					<div class="image-wrapper">
+						<img src="./files/seafood_shrimp.png" alt="seafood-shrimp-image" />
+					</div>
+					<p>Seafood Shrimp</p>
+					<span class="stars"></span>
+					<p class="price">$3 per plate</p>
+					<div class="button-wrapper">
+						<button class="category-atc-button">
+							Add to cart
+							<img
+								src="./files/seafood_shrimp.png"
+								alt="seafood-shrimp-image"
+							/>
+						</button>
+					</div>
+				</div>
+				<div class="meal-wrapper">
+					<div class="image-wrapper">
+						<img src="./files/seafood_shrimp.png" alt="seafood-shrimp-image" />
+					</div>
+					<p>Seafood Shrimp</p>
+					<span class="stars"></span>
+					<p class="price">$3 per plate</p>
+					<div class="button-wrapper">
+						<button class="category-atc-button">
+							Add to cart
+							<img
+								src="./files/seafood_shrimp.png"
+								alt="seafood-shrimp-image"
+							/>
+						</button>
+					</div>
+				</div>
+				<div class="meal-wrapper">
+					<div class="image-wrapper">
+						<img src="./files/seafood_shrimp.png" alt="seafood-shrimp-image" />
+					</div>
+					<p>Seafood Shrimp</p>
+					<span class="stars"></span>
+					<p class="price">$3 per plate</p>
+					<div class="button-wrapper">
+						<button class="category-atc-button">
+							Add to cart
+							<img
+								src="./files/seafood_shrimp.png"
+								alt="seafood-shrimp-image"
+							/>
+						</button>
+					</div>
+				</div>
 			</main>
 			<footer><span>Swallow</span></footer>
 		</section>
@@ -301,27 +409,30 @@
 				<section>
 					<p>Personal Information</p>
 					<div>
-						<p>Email:
-						<input type="email" value="dfjfnu" derth />
+						<p>
+							Email:
+							<input type="email" value="dfjfnu" derth />
 						</p>
-						<p>Phone number:
-						<input type="text" value="874637" derth /></p>
+						<p>Phone number: <input type="text" value="874637" derth /></p>
 					</div>
 				</section>
 				<section>
 					<p>Address</p>
 					<div>
-						<p>Contact address
-						<input type="text" value="Agbowo Ibadan" derth /></p>
+						<p>
+							Contact address <input type="text" value="Agbowo Ibadan" derth />
+						</p>
 					</div>
 				</section>
 				<section>
 					<p>Password</p>
 					<div>
-						<p>Current Password:
-						<input type="password" value="nbhdgchv" derth /></p>
-						<p>Confirm Password:
-						<input type="password" value="nbhdgchv" derth /></p>
+						<p>
+							Current Password: <input type="password" value="nbhdgchv" derth />
+						</p>
+						<p>
+							Confirm Password: <input type="password" value="nbhdgchv" derth />
+						</p>
 					</div>
 				</section>
 			</form>
@@ -329,10 +440,11 @@
 			<section class="unchanged-profile">
 				<div>
 					<p>Leave without making changes?</p>
-				<div class="buttons">
-					<button class="unchanged-profile-yes">Yes</button>
-					<button class="unchanged-profile-no">Back</button>
-				</div></div>
+					<div class="buttons">
+						<button class="unchanged-profile-yes">Yes</button>
+						<button class="unchanged-profile-no">Back</button>
+					</div>
+				</div>
 			</section>
 		</section>
 		<section class="meal-fed">
