--- a/index.html
+++ b/index.html
@@ -64,6 +64,85 @@
 							<p class="price">$3 per plate</p>
 						</div>
 					</section>
+					<section>
+						<div>
+							<div class="image-wrapper">
+								<img
+									src="./files/seafood_shrimp.png"
+									alt="seafood-shrimp-image"
+								/>
+								<button class="view-details">View <span>.</span></button>
+							</div>
+							<p>Seafood Shrimp</p>
+							<div class="stars"></div>
+							<p class="price">$3 per plate</p>
+						</div>
+					</section><section>
+						<div>
+							<div class="image-wrapper">
+								<img
+									src="./files/seafood_shrimp.png"
+									alt="seafood-shrimp-image"
+								/>
+								<button class="view-details">View <span>.</span></button>
+							</div>
+							<p>Seafood Shrimp</p>
+							<div class="stars"></div>
+							<p class="price">$3 per plate</p>
+						</div>
+					</section><section>
+						<div>
+							<div class="image-wrapper">
+								<img
+									src="./files/seafood_shrimp.png"
+									alt="seafood-shrimp-image"
+								/>
+								<button class="view-details">View <span>.</span></button>
+							</div>
+							<p>Seafood Shrimp</p>
+							<div class="stars"></div>
+							<p class="price">$3 per plate</p>
+						</div>
+					</section><section>
+						<div>
+							<div class="image-wrapper">
+								<img
+									src="./files/seafood_shrimp.png"
+									alt="seafood-shrimp-image"
+								/>
+								<button class="view-details">View <span>.</span></button>
+							</div>
+							<p>Seafood Shrimp</p>
+							<div class="stars"></div>
+							<p class="price">$3 per plate</p>
+						</div>
+					</section><section>
+						<div>
+							<div class="image-wrapper">
+								<img
+									src="./files/seafood_shrimp.png"
+									alt="seafood-shrimp-image"
+								/>
+								<button class="view-details">View <span>.</span></button>
+							</div>
+							<p>Seafood Shrimp</p>
+							<div class="stars"></div>
+							<p class="price">$3 per plate</p>
+						</div>
+					</section><section>
+						<div>
+							<div class="image-wrapper">
+								<img
+									src="./files/seafood_shrimp.png"
+									alt="seafood-shrimp-image"
+								/>
+								<button class="view-details">View <span>.</span></button>
+							</div>
+							<p>Seafood Shrimp</p>
+							<div class="stars"></div>
+							<p class="price">$3 per plate</p>
+						</div>
+					</section>
 				</section>
 			</main>
 			<footer>
