--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
 							<div class="stars"></div>
 							<p class="price">$3 per plate</p>
 						</div>
-					</section>
-					<section>
 						<div>
 							<div class="image-wrapper">
 								<img
@@ -77,7 +75,6 @@
 							<div class="stars"></div>
 							<p class="price">$3 per plate</p>
 						</div>
-					</section><section>
 						<div>
 							<div class="image-wrapper">
 								<img
@@ -90,7 +87,6 @@
 							<div class="stars"></div>
 							<p class="price">$3 per plate</p>
 						</div>
-					</section><section>
 						<div>
 							<div class="image-wrapper">
 								<img
@@ -103,7 +99,6 @@
 							<div class="stars"></div>
 							<p class="price">$3 per plate</p>
 						</div>
-					</section><section>
 						<div>
 							<div class="image-wrapper">
 								<img
@@ -116,7 +111,6 @@
 							<div class="stars"></div>
 							<p class="price">$3 per plate</p>
 						</div>
-					</section><section>
 						<div>
 							<div class="image-wrapper">
 								<img
@@ -129,7 +123,54 @@
 							<div class="stars"></div>
 							<p class="price">$3 per plate</p>
 						</div>
-					</section><section>
+						<div>
+							<div class="image-wrapper">
+								<img
+									src="./files/seafood_shrimp.png"
+									alt="seafood-shrimp-image"
+								/>
+								<button class="view-details">View <span>.</span></button>
+							</div>
+							<p>Seafood Shrimp</p>
+							<div class="stars"></div>
+							<p class="price">$3 per plate</p>
+						</div>
+						<div>
+							<div class="image-wrapper">
+								<img
+									src="./files/seafood_shrimp.png"
+									alt="seafood-shrimp-image"
+								/>
+								<button class="view-details">View <span>.</span></button>
+							</div>
+							<p>Seafood Shrimp</p>
+							<div class="stars"></div>
+							<p class="price">$3 per plate</p>
+						</div>
+						<div>
+							<div class="image-wrapper">
+								<img
+									src="./files/seafood_shrimp.png"
+									alt="seafood-shrimp-image"
+								/>
+								<button class="view-details">View <span>.</span></button>
+							</div>
+							<p>Seafood Shrimp</p>
+							<div class="stars"></div>
+							<p class="price">$3 per plate</p>
+						</div>
+						<div>
+							<div class="image-wrapper">
+								<img
+									src="./files/seafood_shrimp.png"
+									alt="seafood-shrimp-image"
+								/>
+								<button class="view-details">View <span>.</span></button>
+							</div>
+							<p>Seafood Shrimp</p>
+							<div class="stars"></div>
+							<p class="price">$3 per plate</p>
+						</div>
 						<div>
 							<div class="image-wrapper">
 								<img
